syntax = "proto3";

package registry;

import "github.com/golang/protobuf/ptypes/empty/empty.proto";

message NetworkServiceEndpoint {
    string network_service_name = 1;
    string endpoint_name = 2;
    string payload = 3;
    map<string, string> labels = 4;
    string socket_location = 5;
}

message RemoveNSERequest {
    string endpoint_name = 1;
}

message FindNetworkServiceRequest {
    string network_service_name = 1;
}
message FindNetworkServiceResponse {
    string payload = 1;
    repeated NetworkServiceEndpoint network_service_endpoints = 2;
}

service NetworkServiceRegistry {
    rpc RegisterNSE (NetworkServiceEndpoint) returns (NetworkServiceEndpoint);
    rpc RemoveNSE (RemoveNSERequest) returns (google.protobuf.Empty);
}

service NetworkServiceDiscovery {
    rpc FindNetworkService (FindNetworkServiceRequest) returns (FindNetworkServiceResponse);
}